# patch

./: .gitattributes  .gitignore  ChangeLog  ChangeLog-2011  EXTERN.h  INTERN.h  Makefile.am  Makefile.in  NEWS  README  README-alpha  README-hacking  README-prereq  acconfig.h  aclocal.m4  addext.c  argmatch.c  argmatch.h  autogen.sh  backupfile.c  backupfile.h  base85.c  base85.h  basename.c  bootstrap  bootstrap.conf  cfg.mk  common.h  config.h.in  config.hin  configure  configure.ac  configure.in  inp.c  inp.h  maketime.c  memchr.c  merge.c  partime.c  patch.c  (+11 more)
gl/lib/: strndup.c  xstrndup.c
gl/m4/: strnlen.m4
lib/: Makefile.am
m4/: .gitignore  mkdir.m4  setmode.m4  xattr.m4
pc/: chdirsaf.c
pc/djgpp/: README  config.h  config.sed  configure.bat  configure.sed
src/: Makefile.am  bestmatch.h  common.h  diffseq.h  inp.c  inp.h  list.h  maketime.c  maketime.h  merge.c  partime.c  partime.h  patch.c  pch.c  pch.h  quotesys.c  safe.c  safe.h  util.c  util.h  version.c
tests/: Makefile.am  asymmetric-hunks  backup-prefix-suffix  bad-filenames  bad-usage  concat-git-diff  context-format  copy-rename  corrupt-patch  corrupt-reject-files  create-delete  create-directory  criss-cross  crlf-handling  dash-o-append  deep-directories  ed-style  empty-files  false-match  fifo  file-create-modes  file-modes  filename-choice  garbage  git-binary-diff  git-cleanup  global-reject-files  inname  line-numbers  mangled-numbers-abort  merge  mixed-patch-types  munged-context-format  need-filename  no-mode-change-git-diff  no-newline-triggers-assert  normal-garbage  preserve-c-function-names  preserve-mode-and-timestamp  quoted-filenames  (+10 more)
